--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.fcrepo</groupId>
+    <artifactId>fcrepo-parent</artifactId>
+    <version>6.0.0-SNAPSHOT</version>
+  </parent>
   <groupId>org.fcrepo.migration</groupId>
   <artifactId>migration-utils</artifactId>
   <version>6.0.0-SNAPSHOT</version>
@@ -14,15 +19,13 @@
     <spring.version>5.2.1.RELEASE</spring.version>
     <lucene.version>7.1.0</lucene.version>
     <jena.version>2.12.1</jena.version>
-    <checkstyle.plugin.version>2.15</checkstyle.plugin.version>
+    <checkstyle.plugin.version>3.1.1</checkstyle.plugin.version>
     <logback.version>1.1.2</logback.version>
     <mockito.version>2.22.0</mockito.version>
     <slf4j.version>1.7.10</slf4j.version>
     <junit.version>4.13.1</junit.version>
-    <fcrepo-build-tools.version>4.3.0</fcrepo-build-tools.version>
+    <fcrepo-build-tools.version>6.0.0-alpha-1</fcrepo-build-tools.version>
     <fcrepo-java-client.version>0.2.1</fcrepo-java-client.version>
-    <fcrepo.storage.ocfl.version>6.0.0-SNAPSHOT</fcrepo.storage.ocfl.version>
-    <fcrepo.version>6.0.0-SNAPSHOT</fcrepo.version>
     <javaee.xml.version>2.3.1</javaee.xml.version>
     <jaxb.core.version>2.3.0.1</jaxb.core.version>
     <jaxb.impl.version>2.3.1</jaxb.impl.version>
@@ -39,7 +42,7 @@
     <dependency>
       <groupId>org.fcrepo</groupId>
       <artifactId>fcrepo-storage-ocfl</artifactId>
-      <version>${fcrepo.storage.ocfl.version}</version>
+      <version>6.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
@@ -174,13 +177,6 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <version>${mockito.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.fcrepo</groupId>
-      <artifactId>fcrepo-webapp</artifactId>
-      <version>${fcrepo.version}</version>
-      <type>war</type>
       <scope>test</scope>
     </dependency>
     <dependency>
