--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <parent>
     <groupId>org.fcrepo</groupId>
     <artifactId>fcrepo-parent</artifactId>
-    <version>6.0.0-alpha-2</version>
+    <version>6.0.0-SNAPSHOT</version>
   </parent>
   <groupId>org.fcrepo.migration</groupId>
   <artifactId>migration-utils</artifactId>
-  <version>6.0.0-alpha-2</version>
+  <version>6.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>migration-utils</name>
@@ -35,14 +35,14 @@
     <connection>scm:git:git://github.com/fcrepo-exts/${project_name}.git</connection>
     <developerConnection>scm:git:git@github.com:fcrepo-exts/${project_name}.git</developerConnection>
     <url>https://github.com/fcrepo-exts/${project_name}</url>
-    <tag>migration-utils-6.0.0-alpha-2</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <dependencies>
     <dependency>
       <groupId>org.fcrepo</groupId>
       <artifactId>fcrepo-storage-ocfl</artifactId>
-      <version>6.0.0-alpha-2</version>
+      <version>6.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
