--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,4 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
     - name: Build with Maven
-      run:
-        - mvn -B -U clean install
-        - mvn javadoc:jar
-        - mvn javadoc:test-aggregate
+      run: mvn -B -U clean install
