remove more fedora2 stuff

--- a/src/main/resources/custom-mapping.properties
+++ b/src/main/resources/custom-mapping.properties
@@ -1,4 +1,4 @@
-# An list of mappings from fedora 2 or 3 object and datastream properties to their
+# An list of mappings from fedora 3 object and datastream properties to their
 # fedora 4 equivalents.  Beyond standard properties from the FOXML file, this also
 # allows mapping of the DC, RELS-EXT, and RELS-INT datastreams.
 #
