--- a/pom.xml
+++ b/pom.xml
@@ -199,8 +199,8 @@
     </dependency>
     <dependency>
       <groupId>io.micrometer</groupId>
-      <artifactId>micrometer-core</artifactId>
-      <version>1.5.5</version>
+      <artifactId>micrometer-registry-prometheus</artifactId>
+      <version>1.6.5</version>
     </dependency>
   </dependencies>
 
