--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   </parent>
   <groupId>org.fcrepo.migration</groupId>
   <artifactId>migration-utils</artifactId>
-  <version>6.0.0-RC-3-SNAPSHOT</version>
+  <version>6.0.0</version>
   <packaging>jar</packaging>
 
   <name>migration-utils</name>
@@ -39,7 +39,7 @@
     <connection>scm:git:git://github.com/fcrepo-exts/${project_name}.git</connection>
     <developerConnection>scm:git:git@github.com:fcrepo-exts/${project_name}.git</developerConnection>
     <url>https://github.com/fcrepo-exts/${project_name}</url>
-    <tag>HEAD</tag>
+    <tag>migration-utils-6.0.0</tag>
   </scm>
 
   <dependencies>
