--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <project_name>migration-utils</project_name>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <spring.version>5.2.1.RELEASE</spring.version>
-    <fcrepo-storage-ocfl.version>6.0.0</fcrepo-storage-ocfl.version>
+    <fcrepo-storage-ocfl.version>6.1.0-SNAPSHOT</fcrepo-storage-ocfl.version>
     <lucene.version>7.1.0</lucene.version>
     <jena.version>3.17.0</jena.version>
     <checkstyle.plugin.version>3.1.1</checkstyle.plugin.version>
