--- a/pom.xml
+++ b/pom.xml
@@ -223,19 +223,15 @@
   </repositories>
 
   <distributionManagement>
-
-    <repository>
-      <id>sonatype-releases</id>
-      <name>Sonatype Release Staging Maven Repository</name>
-      <url>https://${sonatype.host}/service/local/staging/deploy/maven2</url>
-    </repository>
-
     <snapshotRepository>
-      <id>sonatype-snapshots</id>
-      <name>Sonatype Snapshots Maven Repository</name>
-      <url>https://${sonatype.host}/content/repositories/snapshots</url>
+      <id>sonatype-nexus-snapshots</id>
+      <name>Sonatype Nexus Shapshots</name>
+      <url>https://${sonatype.host}/content/repositories/snapshots/</url>
     </snapshotRepository>
-
+    <repository>
+      <id>sonatype-nexus-staging</id>
+      <url>https://${sonatype.host}/service/local/staging/deploy/maven2/</url>
+    </repository>
   </distributionManagement>
 
   <pluginRepositories>
