--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.main.class>org.fcrepo.migration.PicocliMigrator</project.main.class>
     <spring.version>5.2.22.RELEASE</spring.version>
-    <fcrepo-storage-ocfl.version>6.3.0-SNAPSHOT</fcrepo-storage-ocfl.version>
+    <fcrepo-storage-ocfl.version>6.3.0-alpha-1</fcrepo-storage-ocfl.version>
     <lucene.version>7.1.0</lucene.version>
     <jena.version>4.2.0</jena.version>
     <checkstyle.plugin.version>3.1.1</checkstyle.plugin.version>
