--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   </parent>
   <groupId>org.fcrepo.migration</groupId>
   <artifactId>migration-utils</artifactId>
-  <version>6.4.0</version>
+  <version>6.5.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>migration-utils</name>
@@ -41,14 +41,14 @@
     <connection>scm:git:git://github.com/fcrepo-exts/${project_name}.git</connection>
     <developerConnection>scm:git:git@github.com:fcrepo-exts/${project_name}.git</developerConnection>
     <url>https://github.com/fcrepo-exts/${project_name}</url>
-    <tag>migration-utils-6.4.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <dependencies>
     <dependency>
       <groupId>org.fcrepo</groupId>
       <artifactId>fcrepo-storage-ocfl</artifactId>
-      <version>6.3.0</version>
+      <version>6.4.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
