--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
     <dependency>
       <groupId>org.fcrepo</groupId>
       <artifactId>fcrepo-storage-ocfl</artifactId>
-      <version>6.4.0-SNAPSHOT</version>
+      <version>${fcrepo-storage-ocfl.version}</version>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
