--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
     - name: Set up JDK 11
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@31
       with:
         java-version: 11
     - name: Cache Maven packages
@@ -45,7 +45,7 @@ jobs:
       - name: Checkout fcrepo
         uses: actions/checkout@v3
       - name: Set up JDK 11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: 11
           server-id: sonatype-nexus-snapshots
