--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
     - name: Set up JDK 11
-      uses: actions/setup-java@3
+      uses: actions/setup-java@v3
       with:
         java-version: 11
     - name: Cache Maven packages
